+STM32: В режиме Double всегда отображается второй VFO на водопаде (без необходимости активации Show Sec VFO), Tnx SP7MFR
+STM32: На спектре отображаются границы Manual Notch фильтра, Tnx EA7HOG
+STM32: Обновлён шаг по умолчанию для WFM
+STM32: Добавлена калибровка "FAN Motherboard", включающая вентилятор не только на превышение температуры RF-платы, но и на температуру STM32, Tnx SP7MFR

----Version 9.3.1----
+HARDW: W-Lite: Исправление типов диодов в схеме MotherBoard. Автор R7KBI
+STM32: W-Lite: Исправлена регулировка скорости водопада. Автор RA3RBE
+STM32: Для CW моды добавил дополнительное предусиление в ПЧ, Tnx RU4PN
+STM32: Обдув в режиме Full теперь работает до установленной температуры, а не до Medium stop, Tnx RU4PN
+STM32: Частота по умолчанию для 2м бенда установлена в 145.500, Tnx R7KBI
+STM32: При активном Free Tune, переключение Zoom/Samples перемещает спектр в центр полосы приёма, Tnx UR7CQ
+STM32: W-Mini: добавлены дополнительные настраиваемые функциональные кнопки (FT8/VOX/...), Tnx R6DLC
+STM32: Исправлена работа функциональной кнопки MEMORY, Tnx SP7MFR
+STM32: Добавлена настройка "Center After Idle", центрирующая спектр Free Tune во время бездействия более 20 секунд, Tnx R7KBI
+STM32: Изменение положения навигационных кнопок на 8-ми кнопочной версии, Tnx SP7MFR
+STM32: В сервис Self Test добавлена палитра для проверки подключения шины LCD панелей
+STM32: Устранение различных ошибок
+STM32: W-Lite: Добавлена настройка экрана (Mirror) при первом старте программы. Автор RA3RBE
+STM32: Обновлены системные библиотеки

----Version 9.3.0----
+HARDW: Wolf-Motherboard-rev34: Исправления в посадочных местах, переход на USB Type-C, разъём для подключения I2C периферии и прочие исправления. Автор R7KBI
+HARDW: Wolf-Front-Unit-7-rev6: Исправления в посадочных местах. Автор R7KBI
+OTA: Сервер обновлений и сервисов переведён в Нидерланды
+STM32: W-Mini: Добавлена поддержка УКВ платы, Tnx R7KBI