@@ -15,6 +15,7 @@
 +STM32: На спектре отображаются границы Manual Notch фильтра, Tnx EA7HOG
 +STM32: Обновлён шаг по умолчанию для WFM
 +STM32: Добавлена калибровка "FAN Motherboard", включающая вентилятор не только на превышение температуры RF-платы, но и на температуру STM32, Tnx SP7MFR
++STM32: Настройка "Bottom navi buttons" теперь выбирает позицию расположения навигационных кнопок (выкл\центр\по краям), Tnx R3TJL
 
 ----Version 9.3.1----
 +HARDW: W-Lite: Исправление типов диодов в схеме MotherBoard. Автор R7KBI
